# Sushi

./: .gitignore  .pre-commit-config.yaml  README.md  build_manual.sh  pyproject.toml  rebuild_manual.sh  setup.py
src/: CMakeLists.txt  __test_cuda.cu  sushi_core.cpp  sushi_cuda.cu  test_cuda.cu
src/sushi_bindings/: CMakeLists.txt  bindings.cpp
src/sushi_common/: CMakeLists.txt
src/sushi_cpp/: CMakeLists.txt
src/sushi_cpp/include/sushi/: rasterizer.h
src/sushi_cpp/src/: rasterizer.cpp
src/sushi_cuda/: CMakeLists.txt
src/sushi_cuda/experiments/: compositing.cu
src/sushi_cuda/include/sushi_cuda/: cuda_backend.cuh  cuda_utils.cuh
src/sushi_cuda/src/: cuda_backend.cu
sushi/: __init__.py  backend_cpp.py  backend_numpy.py  backend_opencv.py  backend_opengl.py  backend_pillow.py  benchmark.py  example.py  golden_data.py  interface.py  utils.py
sushi/backend/: cpp.py  cuda.py  numpy.py  opencv.py  opengl.py  pillow.py
tests/: test_example.py  test_numpy.py  test_opencv.py  test_pillow.py  test_rasterization.py
tests/data/: generate.py
