[build-system]
requires = [
    "setuptools>=61.0",
    "nanobind>=1.6.0",
    "cmake>=3.15",
    "ninja; platform_system!='Windows'"
]
build-backend = "setuptools.build_meta"

[project]
name = "sushi"
version = "0.1.0"
description = "Optimized implementations of triangle rasterization for MSE loss."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "pillow",
    "moderngl",
    "opencv-python",
    "nanobind>=1.6.0"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pre-commit",
    "matplotlib",
    "seaborn",
    "jupyterlab",
    "ipykernel"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"] # E=pycodestyle errors, F=pyflakes, W=warnings, I=isort
ignore = ["F401"]

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sushi*"]

[tool.setuptools]
zip-safe = false
